# anope

./: .BANNER  .gitignore  .indent.pro  .mailmap  .travis.yml  Anope.cmake  CMakeLists.txt  CODING  Changes  Changes.conf  Changes.lang  Changes.mysql  Config  Config.bat  Makefile  Makefile.in  Makefile.win32  NSIS.template.in  NewChanges  README.md  ReadFile.cmake  TODO  aclocal.m4  actions.c  anope.bat  anope.m4  anopesmtp.c  autogen.sh  botserv.c  channels.c  chanserv.c  commands.c  commands.h  compat.c  config.c  config.h  configure  configure.in  converter.c  datafiles.c  (+55 more)
data/: CMakeLists.txt  anope.example.conf  ascii.conf  bahamut.example.conf  botserv.example.conf  chanserv.example.conf  chanstats.example.conf  commands.example.conf  example.chk  example.conf  example_new.conf  global.example.conf  hostserv.example.conf  hybrid.example.conf  inspircd20.example.conf  irc2sql.example.conf  memoserv.example.conf  modules.example.conf  ngircd.example.conf  nickserv.example.conf  operserv.example.conf  plexus.example.conf  ratbox.example.conf  rfc1459.conf  stats.standalone.example.conf  tables.sql  unreal.example.conf  version.sh
data/mysql/: Anope.php  Register.php  rfc1459.xml  tables.sql
docs/: ASTYLE  AUTHORS.txt  BUGS  C++CASTING  CMakeLists.txt  CODING  COPYING  Changes  Changes.conf  Changes.lang  DEFCON  EVENTS  FAQ  INSTALL  INSTALL.fr  IRCD  LANGUAGE  LANGUAGES  MODULES  MYSQL  MySQL.md  NEWS  OLDCHANGES  PROXY  README  REDIS  REST.md  SQLite.md  TODO  TOOLS  TROUBLESHOOTING  WIN32.txt
docs/RPC/: RPC  XMLRPC  jsonrpc.js  jsonrpc.php  jsonrpc.rb  rpc_data.md  rpc_message.md  rpc_user.md  xmlrpc.php
docs/XMLRPC/: XMLRPC  xmlrpc.php
include/: CMakeLists.txt  Makefile  access.h  accessgroup.h  account.h  anope.h  bahamut.h  base.h  bots.h  botserv.h  channels.h  commands.h  config.h  configreader.h  convert.h  datafiles.h  defs.h  depricated.h  dns.h  dreamforge.h  encrypt.h  event.h  events.h  extensible.h  extern.h  hashcomp.h  hybrid.h  language.h  lists.h  logger.h  mail.h  makefile.win32  memo.h  messages.h  modes.h  module.h  modules.h  numeric.h  oper.h  operserv.h  (+42 more)
include/modules/: botserv.h  bs_badwords.h  bs_bot.h  bs_info.h  bs_kick.h  chanserv.h  cs_access.h  cs_akick.h  cs_drop.h  cs_entrymsg.h  cs_info.h  cs_log.h  cs_mode.h  cs_set.h  cs_set_misc.h  cs_suspend.h  dns.h  encryption.h  fantasy.h  global.h  help.h  hostserv.h  hs_del.h  hs_request.h  httpd.h  info.h  json.h  ldap.h  memoserv.h  nickserv.h  ns_ajoin.h  ns_cert.h  ns_drop.h  ns_group.h  ns_info.h  ns_set.h  ns_suspend.h  ns_update.h  os_defcon.h  os_forbid.h  (+13 more)
lang/: CMakeLists.txt  Makefile  Makefile.win32  anope.ca_ES.po  anope.de_DE.po  anope.el_GR.po  anope.es_ES.po  anope.fr_FR.po  anope.hu_HU.po  anope.it_IT.po  anope.nl_NL.po  anope.pl_PL.po  anope.pot  anope.pt_PT.po  anope.ru_RU.po  anope.tr_TR.po  cat.l  cs_appendtopic.de_DE.po  cs_appendtopic.it_IT.po  cs_appendtopic.nl_NL.po  cs_appendtopic.pot  cs_appendtopic.pt_PT.po  cs_appendtopic.ru_RU.po  cs_enforce.de_DE.po  cs_enforce.it_IT.po  cs_enforce.nl_NL.po  cs_enforce.pot  cs_enforce.pt_PT.po  cs_enforce.ru_RU.po  cs_tban.de_DE.po  cs_tban.it_IT.po  cs_tban.nl_NL.po  cs_tban.pot  cs_tban.pt_PT.po  cs_tban.ru_RU.po  de.l  en_us.l  es.l  fixlang.pl  fr.l  (+27 more)
lib/sqlite/: CMakeLists.txt
modules/: CMakeLists.txt  Makefile  anopeapi.cpp  bs_autoassign.cpp  chanstats.cpp  configure  cs_statusupdate.cpp  dns.cpp  dns.h  dnsbl.cpp  fantasy.cpp  greet.cpp  help.cpp  helpchan.cpp  hs_moo.c  httpd.cpp  ircd_catserv.c  ldap_authentication.cpp  ldap_oper.cpp  m_dns.cpp  m_dnsbl.cpp  m_helpchan.cpp  m_httpd.cpp  m_json.cpp  m_json_main.cpp  m_proxyscan.cpp  m_redis.cpp  m_regex_stdlib.cpp  m_rewrite.cpp  m_sasl.cpp  m_sql_log.cpp  m_xmlrpc.cpp  m_xmlrpc_main.cpp  ns_maxemail.cpp  proxyscan.cpp  redis.cpp  regex_stdlib.cpp  rewrite.cpp  sasl.cpp  sql_authentication.cpp  (+5 more)
modules/botserv/: assign.cpp  autoassign.cpp  badwords.cpp  bot.cpp  botlist.cpp  botserv.cpp  bs_assign.cpp  bs_autoassign.cpp  bs_badwords.cpp  bs_bot.cpp  bs_botlist.cpp  bs_control.cpp  bs_info.cpp  bs_kick.cpp  bs_set.cpp  control.cpp  info.cpp  kick.cpp  set.cpp
modules/chanserv/: CMakeLists.txt  access.cpp  akick.cpp  ban.cpp  chanserv.cpp  clone.cpp  cs_access.cpp  cs_access.old  cs_akick.cpp  cs_ban.cpp  cs_clone.cpp  cs_drop.cpp  cs_enforce.cpp  cs_entrymsg.cpp  cs_fantasy_stats.cpp  cs_fantasy_top.cpp  cs_flags.cpp  cs_flags.old  cs_getkey.cpp  cs_info.cpp  cs_invite.cpp  cs_kick.cpp  cs_list.cpp  cs_log.cpp  cs_mode.cpp  cs_register.cpp  cs_seen.cpp  cs_set.cpp  cs_set_misc.cpp  cs_status.cpp  cs_statusupdate.cpp  cs_suspend.cpp  cs_sync.cpp  cs_topic.cpp  cs_unban.cpp  cs_updown.cpp  cs_xop.cpp  cs_xop.old  drop.cpp  enforce.cpp  (+21 more)
modules/commands/: bs_assign.cpp  bs_badwords.cpp  bs_bot.cpp  bs_botlist.cpp  bs_control.cpp  bs_info.cpp  bs_kick.cpp  bs_set.cpp  bs_set_dontkickops.cpp  bs_set_dontkickvoices.cpp  bs_set_fantasy.cpp  bs_set_greet.cpp  bs_set_nobot.cpp  bs_set_private.cpp  cs_access.cpp  cs_akick.cpp  cs_appendtopic.cpp  cs_ban.cpp  cs_clearusers.cpp  cs_clone.cpp  cs_drop.cpp  cs_enforce.cpp  cs_entrymsg.cpp  cs_fantasy_stats.cpp  cs_fantasy_top.cpp  cs_flags.cpp  cs_getkey.cpp  cs_info.cpp  cs_invite.cpp  cs_kick.cpp  cs_list.cpp  cs_log.cpp  cs_mode.cpp  cs_modes.cpp  cs_register.cpp  cs_saset.cpp  cs_saset_noexpire.cpp  cs_seen.cpp  cs_set.cpp  cs_set_autoop.cpp  (+118 more)
modules/core/: botserv.h  bs_act.cpp  bs_assign.cpp  bs_badwords.cpp  bs_bot.cpp  bs_botlist.cpp  bs_control.cpp  bs_help.cpp  bs_info.cpp  bs_kick.cpp  bs_main.cpp  bs_say.cpp  bs_set.cpp  (+169 more)
src/: CMakeLists.txt  Makefile  access.cpp  accessgroup.cpp  account.cpp  actions.c  actions.cpp  bahamut.c  base.cpp  base64.c  base64.cpp  bots.cpp  botserv.c  botserv.cpp  channels.c  channels.cpp  chanserv.c  chanserv.cpp  command.cpp  commands.c  commands.cpp  compat.c  compat.cpp  config.c  config.cpp  configreader.cpp  converter.c  datafiles.c  dns.cpp  dreamforge.c  encrypt.c  encrypt.cpp  event.cpp  events.c  extensible.cpp  hashcomp.cpp  helpserv.c  hostserv.c  hostserv.cpp  hybrid.c  (+95 more)
(+1156 files in other folders)
